@@ -83,7 +83,6 @@ public class Merge extends Node {
 	public final static String COMPONENT_TYPE = "MERGE";
 
 	private static final String XML_MERGEKEY_ATTRIBUTE = "mergeKey";
-	private static final String XML_EQUAL_NULL_ATTRIBUTE = "equalNULL";
 
 	private final static int WRITE_TO_PORT = 0;
 
@@ -92,8 +91,6 @@ public class Merge extends Node {
 	private String[] mergeKeys;
 
 	private RecordKey comparisonKey;
-
-	private boolean equalNULL = false; //this default value should be changed to 'true' - issue
 
 	/**
 	 *  Constructor for the Merge object
@@ -238,7 +235,7 @@ public class Merge extends Node {
 		
 		// initialize key
 		comparisonKey = new RecordKey(mergeKeys, getInputPort(0).getMetadata());
-		comparisonKey.setEqualNULLs(equalNULL);
+		comparisonKey.setEqualNULLs(true);
 		try {
 			comparisonKey.init();
 		} catch (Exception e) {
@@ -260,8 +257,6 @@ public class Merge extends Node {
 			mKeys += Defaults.Component.KEY_FIELDS_DELIMITER + mergeKeys[i]; 
 		}
 		xmlElement.setAttribute(XML_MERGEKEY_ATTRIBUTE, mKeys);
-        // equal NULL attribute
-		xmlElement.setAttribute(XML_EQUAL_NULL_ATTRIBUTE, String.valueOf(equalNULL));
 	}
 
 
@@ -278,9 +273,6 @@ public class Merge extends Node {
 		try {
 			Merge merge = new Merge(xattribs.getString(XML_ID_ATTRIBUTE),
 					xattribs.getString(XML_MERGEKEY_ATTRIBUTE).split(Defaults.Component.KEY_FIELDS_DELIMITER_REGEX));
-            if (xattribs.exists(XML_EQUAL_NULL_ATTRIBUTE)){
-            	merge.setEqualNULL(xattribs.getBoolean(XML_EQUAL_NULL_ATTRIBUTE));
-            }
             return merge;
 		} catch (Exception ex) {
 	           throw new XMLConfigurationException(COMPONENT_TYPE + ":" + xattribs.getString(XML_ID_ATTRIBUTE," unknown ID ") + ":" + ex.getMessage(),ex);
@@ -335,10 +327,6 @@ public class Merge extends Node {
 	public synchronized void reset() throws ComponentNotReadyException {
 		super.reset();
 		// no implementation needed
-	}
-
-	public void setEqualNULL(boolean equalNULL) {
-	    this.equalNULL = equalNULL;
 	}
 
 }
