@@ -7,6 +7,7 @@ REL 3-0
 + new RunGraph component attribute "paramsToPass"
 + dedicated graph property name "PROJECT_DIR" (absolute path to project home directory) was substituted by attribute at GraphRuntimeContext.contextURL
 	- new command line attribute -contexturl <path> should be used instead of -P:PROJECT_DIR="<path>"
++ equalNulls attribute of Merge component was removed - value of this attribute was fixed on 'true' value 
 
 REL 2-9-2
 ---------
